[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-leetcode"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]          # only look under tests/ :contentReference[oaicite:1]{index=1}
