[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-leetcode"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]          # only look under tests/ :contentReference[oaicite:1]{index=1}

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
    "safety>=3.7.0",
    "vulture>=2.14",
]
